--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:14:18-slim
+FROM node:14.18-slim
 
 
 WORKDIR /frontend
 
-COPY package-lock /frontend/
+COPY package-lock.json /frontend/
 COPY package.json /frontend/
 
 RUN npm install
