--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,9 +39,11 @@
     "@testing-library/react": "12.1.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.6",
+    "@types/node-sass": "^4.11.2",
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
     "@types/react-router-dom": "5.3.2",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
