Start styling login page

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.18-slim
+FROM node:14.18-alpine
 
 
 WORKDIR /frontend
@@ -6,6 +6,7 @@ WORKDIR /frontend
 COPY package-lock.json /frontend/
 COPY package.json /frontend/
 
+RUN apk add --update python3 make g++ && rm -rf /var/cache/apk/*
 RUN npm install
 
 CMD ["npm", "start"]
