--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,10 +43,13 @@
     "@types/react-dom": "17.0.11",
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "5.3.2",
+    "axios": "^0.26.1",
     "bem": "^2.0.0",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.9.0",
+    "react-query": "^3.35.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "17.0.2",
