--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,11 @@
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "5.3.2",
     "axios": "^0.26.1",
+    "axios-auth-refresh": "^3.2.2",
+    "axios-mock-adapter": "^1.20.0",
     "bem": "^2.0.0",
     "formik": "^2.2.9",
+    "http-status-codes": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.9.0",
