--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,8 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "17.0.2",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/testing-library__jest-dom": "5.14.1",
