--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "17.0.11",
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "5.3.2",
+    "antd": "^4.19.5",
     "axios": "^0.26.1",
     "axios-auth-refresh": "^3.2.2",
     "axios-mock-adapter": "^1.20.0",
