--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
+    "@tippyjs/react": "^4.2.6",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
@@ -57,6 +58,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "17.0.2",
+    "tippy": "^0.0.0",
     "typescript": "4.4.4",
     "yup": "^0.32.11"
   },
