--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "17.0.11",
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "5.3.2",
+    "@types/uuid": "^8.3.4",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "axios-auth-refresh": "^3.2.2",
@@ -60,6 +61,7 @@
     "react-test-renderer": "17.0.2",
     "tippy": "^0.0.0",
     "typescript": "4.4.4",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
