--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
     "@types/react-jss": "^10.0.0",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "5.3.2",
     "@types/uuid": "^8.3.4",
     "antd": "^4.19.5",
@@ -55,6 +56,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.9.0",
+    "react-paginate": "^8.1.3",
     "react-query": "^3.35.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
