--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,9 @@
     "axios-mock-adapter": "^1.20.0",
     "bem": "^2.0.0",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "http-status-codes": "^2.2.0",
+    "msw": "^0.39.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jss": "^10.9.0",
